[package]
name = "shooter"
version = "0.1.0"
authors = ["Alex Constantinou <a_constantinou@hotmail.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dev-dependencies]
js-sys = "0.3.24"
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]